--- a/src/App.css
+++ b/src/App.css
@@ -584,29 +584,147 @@
     font-family: monospace;
 }
 
-/* @keyframes hp {
-    0%   { bottom:0px; left:0;}
-    50%  { top:7rem; left:0px;}
-  }
+@media (max-width: 920px) {
+    .pok-select {
+        width: 150px;
+    }
+    .pok-option {
+        font-size: 0.7rem;
+    }
 
-.hpdiv {
-    position: absolute;
-    top: -2%;
-    border: 1px solid black;
-    width: 3rem;
-    height: 7rem;
+    .fighter-pokemon {
+        height: 15rem;
+        width: 10rem;
+    }
+    .pok-vs-img{
+        width: auto;
+        height: auto;
+    }
+    .player-id {
+        font-size: 1.4rem;
+    }
+    .pok-1-infos {
+        width: auto;
+    }
+    .fighter-pok-img {
+        width: 10rem;
+        height: 10rem;
+    }
+    .moves-container {
+        gap: 3px;
+    }
+    .pok1moves {
+        width: 5rem;
+        height: 5rem;
+        font-size: 0.9rem;
+    }
 }
 
-.damage- {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    bottom: -20%; 
-    right: 20%;
-    animation-name: hp;
-    animation-duration: 4s;
-    text-align: center;
-    font-size: 1.4rem;
-}    */
+@media (max-width: 750px) {
+    .pok-1-infos {
+        width: 10rem;
+    }
+    .pok1moves {
+        width: 4rem;
+        height: 4rem;
+    }
+    .attack-p {
+        font-size: 1rem;
+    }
+    .finish-game-btn {
+        font-size: 0.7rem;
+    }
+}
 
+@media (max-width: 800px) {
+    .player-id {
+        font-size: 1rem;
+    }
+    .deneme {
+        gap: 10px;
+    }
+    .fighter-pokemon {
+        width: 5rem;
+        height: 15rem;
+    }
+}
+
+@media (max-width: 500px) {
+    .pok-vs-img {
+        width: 3rem;
+        height: 3rem;
+    }
+    .player-id {
+        font-size: 0.9rem;
+    }
+    .fighter-pok-name {
+        font-size: 0.9rem;
+    }
+    .pok-hp {
+        font-size: 1rem;
+    }
+    .save-pok {
+        font-size: 0.9rem;
+    }
+
+    .pok-img {
+        width: 5rem;
+        height: 5rem;
+    }
+    .id-p {
+        font-size: 1rem;
+    }
+    .pok-name {
+        font-size: 1rem;
+    }
+    .asd {
+        font-size: 1rem;
+    }
+    .pok-select {
+        width: 100px;
+        font-size: 0.8rem;
+    }
+    .pab {
+        font-size: 0.9rem;
+    }
+    .pok-abilities {
+        font-size: 0.9rem;
+    }
+    .typ {
+        font-size: 0.9rem;
+    }
+    .pok-type {
+        font-size: 0.9rem;
+    }
+    .deneme {
+        gap: 0;
+    }
+    .fighter-pokemon {
+        padding: 1rem;
+    }
+
+
+    .pok-1-infos {
+        width: 5rem;
+        padding: 1rem;
+    }
+    .pok1moves {
+        width: 4rem;
+        height: 4rem;
+    }
+    .moves-container {
+        flex-direction: column;
+    }
+    .attack-p {
+        font-size: 1rem;
+    }
+    .finish-game-btn {
+        font-size: 0.7rem;
+    }
+    .player-id-fight {
+        font-size: 1rem;
+    }
+    .pok-1-health {
+        font-size: 1.2rem;
+    }
+}
